cmake_minimum_required(VERSION 3.31)
project(BOJ)

set(CMAKE_CXX_STANDARD 20)

add_executable(BOJ main.cpp
        template.cpp)

add_executable(_ "Baekjoon Online Judge/_.cpp")
add_executable( "Baekjoon Online Judge/.cpp")
add_executable( "Baekjoon Online Judge/.cpp")
add_executable( "Baekjoon Online Judge/.cpp")
add_executable( "Baekjoon Online Judge/.cpp")
add_executable( "Baekjoon Online Judge/.cpp")
add_executable( "Baekjoon Online Judge/.cpp")